# zed-bevy-colors

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  clippy.toml  deny.toml  flake.nix  lefthook.yml  release-plz.toml  typos.toml
.github/workflows/: bench.yml  ci.yml  lint.yml  release-plz.yml  release.yml
.zed/: settings.json
crates/bevy-color-lsp/: Cargo.toml
crates/bevy-color-lsp/benches/: pipeline.rs
crates/bevy-color-lsp/src/: color.rs  document.rs  error.rs  lib.rs  main.rs  named_colors.rs  num.rs  palette.rs  parser.rs  server.rs
crates/bevy-color-lsp/src/detectors/: bevy_const.rs  bevy_ctor.rs  bevy_hex.rs  mod.rs  palette.rs
crates/bevy-color-lsp/tests/: lsp_integration.rs
crates/zed-extension/: Cargo.toml  extension.toml
crates/zed-extension/src/: lib.rs
docs/superpowers/plans/: 2026-04-18-devx-maintainability.md
docs/superpowers/specs/: 2026-04-18-devx-maintainability-design.md
