[workspace]
members = ["crates/bevy-color-lsp", "crates/zed-extension"]
default-members = ["crates/bevy-color-lsp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DavidDudson/zed-bevy-colors"
authors = ["David Dudson <davidjohndudson@gmail.com>"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
