[package]
name = "bevy-color-lsp"
description = "LSP server reporting Bevy Color literals via textDocument/documentColor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/DavidDudson/zed-bevy-colors"
documentation = "https://docs.rs/bevy-color-lsp"
readme = "../../README.md"
keywords = ["bevy", "color", "lsp", "language-server", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "bevy-color-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
palette = { version = "0.7", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
